# etrade_tax_poland

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  dividends.py  etrade.py  etrade_common.py  nbp_cache.json  pyproject.toml  requirements.txt  stocks.py  util_fill_nbp_cache.py
src/etrade_tax_poland/: __main__.py  args.py  common.py  dividends.py  files_handling.py  maths.py  nbp.py  nbp_cache.json  stocks.py  util_fill_nbp_cache.py
src/etrade_tax_poland/cache/: .intc_cache.json  .nbp_cache.json  cache_file.py  intc.py  nbp.py
src/etrade_tax_poland/cache/utils/: fill_intc_cache.py  fill_nbp_cache.py
